tests/cases/logic_nonbool.mzc
function main() {
  let n: i32 = 5;
  let b: bool = n && true;    // error: && requires bool operands
  stdout.println(b);
}
